[gd_scene load_steps=5 format=2]

[ext_resource path="res://boss/res/lasershooter.png" type="Texture" id=1]
[ext_resource path="res://boss/script/radial laser v1.gd" type="Script" id=2]
[ext_resource path="res://boss/res/laser.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="radial laser v1" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="laser2" type="Area2D" parent="."]

[node name="laser" type="Sprite" parent="laser2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser2"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="laser2"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 10000, 0 )

[node name="laser_shooter" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="laser2" to="." method="_on_laser2_body_entered"]
[connection signal="body_exited" from="laser2" to="." method="_on_laser2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
